--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
                     <execution>
                         <phase>package</phase>
                         <goals>
+                            <goal>repackage</goal>
                             <goal>build-info</goal>
                         </goals>
                     </execution>
