--- a/oauth2client-test/pom.xml
+++ b/oauth2client-test/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.4</version>
+        <version>3.5.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -37,6 +37,12 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.experimental.boot</groupId>
+            <artifactId>spring-boot-testjars</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
